--- a/LoginPage/CreateNewSectionPage.xaml
+++ b/LoginPage/CreateNewSectionPage.xaml
@@ -58,7 +58,7 @@
         <Button Content="Add section" HorizontalAlignment="Center" Margin="69,279,635,140" VerticalAlignment="Center" Width="145" Height="50" FontSize="25" Click="Button_Click" Grid.Row="1"/>
         <Button x:Name="bt_comment" Content="Add Comment" HorizontalAlignment="Center" Margin="434,277,165,142" VerticalAlignment="Center" Width="250" Height="50" FontSize="30" Grid.Row="1" Click="bt_comment_Click" IsEnabled="False" RenderTransformOrigin="-0.086,0.683"/>
         <Border CornerRadius="5" BorderThickness="3" BorderBrush="White" Margin="434,66.6,97,217" Grid.ColumnSpan="2" Grid.Row="1"  VerticalAlignment="Center" HorizontalAlignment="Center" Height="186" Width="668.8" >
-            <TextBlock x:Name="text_box" Background="White" TextWrapping="Wrap" Margin="-0.2,-2.2,-0.4,-0.6"></TextBlock>
+            <TextBlock x:Name="text_box" Background="White" TextWrapping="Wrap" Margin="-0.2,-2.2,-0.4,-0.6" FontSize="18"></TextBlock>
         </Border>
         <Button Content="Delete section" HorizontalAlignment="Center" Margin="240,277,449,142" VerticalAlignment="Center" Width="160" Height="50" FontSize="25" Click="bt_Delete_Section" Grid.Row="1"/>
         <Button x:Name="bt_delete_Comment_" Content="Delete Comment" HorizontalAlignment="Center" Margin="4,279,97,140" VerticalAlignment="Center" Width="250" Height="50" FontSize="30" Grid.Row="1" IsEnabled="False" RenderTransformOrigin="-0.086,0.683" Click="bt_Delete_Comment" Grid.Column="1"/>
